fix: tree control search and expansion (#387)
* fix: invert the strange uk-grid overlapping

* fix: tree search function

* feat: add reset button for org search

* fix: hide collapse/expand icons when search is active

--- a/app/styles/ember-emeis.scss
+++ b/app/styles/ember-emeis.scss
@@ -10,22 +10,19 @@ $ember-power-select-border-color: $global-border;
   transition: width 0.3s ease-out;
 }
 
-[class*="uk-search-icon"] {
-  &:focus,
-  &:hover {
-    background: $global-muted-background;
+// fixes the negative margin overlapp of uk-grid
+.uk-grid-divider-fix {
+  margin-left: 0;
+
+  .uk-first-column {
+    padding-left: 0;
   }
-  border: solid 1px $global-border;
 }
 
-[class*="search-reset-icon"] {
-  &:focus,
-  &:hover {
-    background: $global-muted-background;
-  }
-  border: solid 1px $global-border;
-  border-left-color: transparent;
+div.uk-grid-divider-fix.uk-grid-stack > .uk-grid-margin::before {
+  left: 0px;
 }
+// end fix
 
 .no-style-button {
   background: none;
@@ -96,8 +93,8 @@ $tree_node_icon_margin: calc($tree_indicator_height/2);
   flex-direction: column;
 
   padding-right: $tree_node_icon_margin;
-  position: relative;
-  max-height: 100%;
+  height: 100%;
+  max-height: 65vh;
 
   .tree {
     overflow-y: auto;
